--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<table cellspacing="20">
 		<tr>
 			<td>
-				<img src="./felipe face.jpg" alt="Imagem nao suportada - foto">
+				<img src="./image/felipe face.jpg" alt="Imagem nao suportada - foto">
 			</td>
 			<td>
 				<h1>Felipe Bessa</h1>
